--- a/package.json
+++ b/package.json
@@ -2,16 +2,7 @@
   "name": "ng-in-viewport",
   "version": "1.1.0",
   "description": "Allows us to check if an element is within the browsers visual viewport",
-  "main": "dist/index.js",
-  "scripts": {
-    "build": "rimraf dist && tsc",
-    "build:watch": "rimraf dist && tsc -w",
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/k3nsei/angular2-in-viewport.git"
-  },
+  "license": "MIT",
   "authors": [
     {
       "name": "Piotr Stępniewski",
@@ -19,11 +10,20 @@
       "url": "https://github.com/k3nsei"
     }
   ],
-  "license": "MIT",
+  "homepage": "https://k3nsei.github.io/angular2-in-viewport/",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/k3nsei/angular2-in-viewport.git"
+  },
   "bugs": {
     "url": "https://github.com/k3nsei/angular2-in-viewport/issues"
   },
-  "homepage": "https://github.com/k3nsei/angular2-in-viewport#readme",
+  "main": "dist/index.js",
+  "scripts": {
+    "build": "rimraf dist && tsc",
+    "build:watch": "rimraf dist && tsc -w",
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
   "dependencies": {
     "@angular/common": "^4.0.0",
     "@angular/core": "^4.0.0",
