--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ng-in-viewport",
-  "version": "1.1.3",
+  "version": "1.2.0",
   "description": "Allows us to check if an element is within the browsers visual viewport",
   "license": "MIT",
   "authors": [
@@ -10,30 +10,31 @@
       "url": "https://github.com/k3nsei"
     }
   ],
-  "homepage": "https://k3nsei.github.io/angular2-in-viewport/",
+  "homepage": "https://k3nsei.github.io/ng-in-viewport/",
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/k3nsei/angular2-in-viewport.git"
+    "url": "git+https://github.com/k3nsei/ng-in-viewport.git"
   },
   "bugs": {
-    "url": "https://github.com/k3nsei/angular2-in-viewport/issues"
+    "url": "https://github.com/k3nsei/ng-in-viewport/issues"
   },
   "main": "dist/index.js",
   "scripts": {
-    "build": "rimraf dist && tsc",
-    "build:watch": "rimraf dist && tsc -w",
+    "build": "rimraf dist && tsc -p src/",
+    "build:watch": "rimraf dist && tsc -p src// -w",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "dependencies": {
-    "@angular/common": "^4.0.0",
-    "@angular/core": "^4.0.0",
+    "@angular/common": "^4.0.1",
+    "@angular/compiler": "^4.0.1",
+    "@angular/core": "^4.0.1",
     "core-js": "^2.4.1",
-    "reflect-metadata": "^0.1.10",
-    "rxjs": "^5.0.1",
-    "zone.js": "^0.8.4"
+    "intersection-observer": "^0.2.1",
+    "rxjs": "5.0.1",
+    "zone.js": "^0.8.5"
   },
   "devDependencies": {
     "rimraf": "^2.6.1",
-    "typescript": "^2.2.1"
+    "typescript": "~2.2.2"
   }
 }
