--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@angular/core": "^4.0.1",
     "core-js": "^2.4.1",
     "intersection-observer": "^0.2.1",
+    "reflect-metadata": "^0.1.10",
     "rxjs": "5.0.1",
     "zone.js": "^0.8.5"
   },
