--- a/src/tsconfig.json
+++ b/src/tsconfig.json
@@ -1,23 +1,19 @@
 {
   "compilerOptions": {
     "baseUrl": ".",
-    "rootDir": ".",
-    "outDir": "../dist/",
-    "module": "es2015",
-    "moduleResolution": "node",
-    "target": "es2015",
+    "outDir": "../dist",
+    "sourceMap": true,
     "declaration": true,
-    "stripInternal": true,
+    "module": "umd",
+    "moduleResolution": "node",
     "emitDecoratorMetadata": true,
     "experimentalDecorators": true,
-    "noImplicitAny": true,
-    "suppressImplicitAnyIndexErrors": true,
-    "removeComments": false,
-    "sourceMap": true,
-    "inlineSources": true,
-    "skipLibCheck": false,
+    "target": "es5",
+    "typeRoots": [
+      "node_modules/@types"
+    ],
     "lib": [
-      "es2015",
+      "es2016",
       "dom"
     ]
   },
