--- a/src/tsconfig.json
+++ b/src/tsconfig.json
@@ -1,10 +1,9 @@
 {
   "compilerOptions": {
-    "baseUrl": ".",
     "outDir": "../dist",
     "sourceMap": true,
     "declaration": true,
-    "module": "umd",
+    "module": "es2015",
     "moduleResolution": "node",
     "emitDecoratorMetadata": true,
     "experimentalDecorators": true,
