--- a/src/package.json
+++ b/src/package.json
@@ -18,23 +18,10 @@
   "bugs": {
     "url": "https://github.com/k3nsei/ng-in-viewport/issues"
   },
-  "main": "dist/index.js",
-  "scripts": {
-    "build": "rimraf dist && tsc -p src/",
-    "build:watch": "rimraf dist && tsc -p src// -w",
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "dependencies": {
+  "module": "index.es5.js",
+  "es2015": "index.js",
+  "peerDependencies": {
+    "@angular/core": "~4.0.0",
     "intersection-observer": "~0.2.1"
-  },
-  "devDependencies": {
-    "@angular/core": "^4.0.1",
-    "@angular/compiler": "^4.0.1",
-    "@angular/compiler-cli": "^4.0.1",
-    "rxjs": "^5.0.1",
-    "zone.js": "^0.8.4",
-    "rimraf": "^2.6.1",
-    "rollup": "^0.41.6",
-    "typescript": "^2.2.2"
   }
 }
