--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,6 +4,7 @@
     "experimentalDecorators": true,
     "moduleResolution": "node",
     "rootDir": "./src",
+    "target": "es2015",
     "lib": [
       "es2015",
       "dom"
