--- a/.gitignore
+++ b/.gitignore
@@ -1,16 +1,39 @@
+# See http://help.github.com/ignore-files/ for more about ignoring files.
+
 # compiled output
-/build
 /dist
 /tmp
+/out-tsc
 
 # dependencies
 /node_modules
-/bower_components
 
-# IDEs
+# IDEs and editors
 /.idea
-/.vscode
+.project
+.classpath
+.c9/
+*.launch
+.settings/
+*.sublime-workspace
+
+# IDE - VSCode
+.vscode/*
+!.vscode/settings.json
+!.vscode/tasks.json
+!.vscode/launch.json
+!.vscode/extensions.json
 
 # misc
+/.sass-cache
+/connect.lock
+/coverage
+/libpeerconnection.log
+npm-debug.log
+yarn-error.log
+testem.log
+/typings
+
+# System Files
 .DS_Store
-*.log
+Thumbs.db
