--- a/package.json
+++ b/package.json
@@ -25,13 +25,13 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "dependencies": {
-    "intersection-observer": ">=0.5.0",
-    "prettier": "^1.12.1"
+    "intersection-observer": ">=0.5.0"
   },
   "devDependencies": {
     "@angular/compiler": ">=4.0.0 < 6",
     "@angular/compiler-cli": ">=4.0.0 < 6",
     "@angular/core": ">=4.0.0 < 6",
+    "prettier": "^1.12.1",
     "rimraf": "^2.6.2",
     "rollup": "^0.58.2",
     "rxjs": "^5.0.1",
