--- a/src/package.json
+++ b/src/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ng-in-viewport",
-  "version": "1.2.0",
+  "version": "1.2.1",
   "description": "Allows us to check if an element is within the browsers visual viewport",
   "license": "MIT",
   "authors": [
@@ -21,7 +21,7 @@
   "module": "index.es5.js",
   "es2015": "index.js",
   "peerDependencies": {
-    "@angular/core": "~4.0.0",
-    "intersection-observer": "~0.2.1"
+    "@angular/core": ">=4.0.0 < 6",
+    "intersection-observer": ">=0.5.0"
   }
 }
