--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ng-in-viewport",
-  "version": "1.2.1",
+  "version": "1.2.2",
   "description": "Allows us to check if an element is within the browsers visual viewport",
   "license": "MIT",
   "authors": [
@@ -18,7 +18,7 @@
   "bugs": {
     "url": "https://github.com/k3nsei/ng-in-viewport/issues"
   },
-  "main": "dist/index.js",
+  "main": "dist/index.umd.js",
   "scripts": {
     "build": "bash ./build.sh",
     "format": "prettier --write \"src/in-viewport/**/*.ts\"",
