--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   "scripts": {
     "build": "bash ./build.sh",
     "format": "prettier --write \"src/in-viewport/**/*.ts\"",
+    "gen-api-doc": "typedoc --out ./docs/api/ ./src/in-viewport/in-viewport.ts",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "dependencies": {
@@ -35,6 +36,7 @@
     "rimraf": "^2.6.2",
     "rollup": "^0.58.2",
     "rxjs": "^5.0.1",
+    "typedoc": "^0.11.1",
     "typescript": "^2.3.2",
     "zone.js": "^0.8.4"
   }
