--- a/src/package.json
+++ b/src/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ng-in-viewport",
-  "version": "1.2.5-rc.0",
+  "version": "1.2.5",
   "description": "Allows us to check if an element is within the browsers visual viewport",
   "license": "MIT",
   "authors": [
@@ -18,7 +18,7 @@
   "bugs": {
     "url": "https://github.com/k3nsei/ng-in-viewport/issues"
   },
-  "main": "index.umd.js",
+  "main": "index.es5.umd.js",
   "module": "index.es5.js",
   "es2015": "index.js",
   "peerDependencies": {
