--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ng-in-viewport",
-  "version": "1.2.5",
+  "version": "1.2.6",
   "description": "Allows us to check if an element is within the browsers visual viewport",
   "license": "MIT",
   "authors": [
@@ -31,6 +31,7 @@
     "@angular/compiler": ">=4.0.0 < 6",
     "@angular/compiler-cli": ">=4.0.0 < 6",
     "@angular/core": ">=4.0.0 < 6",
+    "@angular/common": ">=4.0.0 < 6",
     "prettier": "^1.12.1",
     "rimraf": "^2.6.2",
     "rollup": "^0.58.2",
