--- a/src/package.json
+++ b/src/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ng-in-viewport",
-  "version": "1.2.5",
+  "version": "1.2.6",
   "description": "Allows us to check if an element is within the browsers visual viewport",
   "license": "MIT",
   "authors": [
@@ -23,6 +23,7 @@
   "es2015": "index.js",
   "peerDependencies": {
     "@angular/core": ">=4.0.0 < 6",
+    "@angular/common": ">=4.0.0 < 6",
     "intersection-observer": ">=0.5.0"
   }
 }
