--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ng-in-viewport",
-  "version": "6.0.0",
+  "version": "6.0.0-rc.1",
   "description": "Allows us to check if an element is within the browsers visual viewport",
   "license": "MIT",
   "authors": [
@@ -20,7 +20,7 @@
   },
   "scripts": {
     "ng": "ng",
-    "start": "ng serve --prod --aot",
+    "start": "ng serve",
     "build": "ng build in-viewport --prod --aot",
     "build:lib": "ng build ng-in-viewport --prod",
     "test": "ng test in-viewport",
@@ -29,35 +29,50 @@
     "lint:lib": "ng lint ng-in-viewport",
     "format": "prettier --write \"src/**/*.ts\"",
     "format:lib": "prettier --write \"projects/ng-in-viewport/src/**/*.ts\"",
-    "e2e": "ng e2e"
+    "predoc:lib": "rimraf ./docs",
+    "doc:lib": "yarn run typedoc --tsconfig ./projects/ng-in-viewport/tsconfig.lib.json --out ./docs/ ./projects/ng-in-viewport/src/public_api.ts",
+    "e2e": "ng e2e",
+    "build:client-and-server-bundles": "ng build ng-in-viewport --prod && ng build in-viewport --prod --aot && ng run in-viewport:server:production",
+    "build:prerender": "npm run build:client-and-server-bundles && npm run webpack:server && npm run generate:prerender",
+    "build:ssr": "npm run build:client-and-server-bundles && npm run webpack:server",
+    "generate:prerender": "cd dist && node prerender",
+    "webpack:server": "webpack --config webpack.server.config.js --progress --colors",
+    "serve:prerender": "cd dist/in-viewport && http-server",
+    "serve:ssr": "node dist/server"
   },
   "dependencies": {
-    "@angular/animations": "^6.0.1",
-    "@angular/common": "^6.0.1",
-    "@angular/compiler": "^6.0.1",
-    "@angular/core": "^6.0.1",
-    "@angular/forms": "^6.0.1",
-    "@angular/http": "^6.0.1",
-    "@angular/platform-browser": "^6.0.1",
-    "@angular/platform-browser-dynamic": "^6.0.1",
-    "@angular/router": "^6.0.1",
+    "@angular/animations": "^6.0.3",
+    "@angular/common": "^6.0.3",
+    "@angular/compiler": "^6.0.3",
+    "@angular/core": "^6.0.3",
+    "@angular/forms": "^6.0.3",
+    "@angular/http": "^6.0.3",
+    "@angular/platform-browser": "^6.0.3",
+    "@angular/platform-browser-dynamic": "^6.0.3",
+    "@angular/platform-server": "^6.0.3",
+    "@angular/router": "^6.0.3",
+    "@nguniversal/common": "^6.0.0",
+    "@nguniversal/express-engine": "^6.0.0",
+    "@nguniversal/module-map-ngfactory-loader": "^6.0.0",
     "classlist.js": "^1.1.20150312",
-    "core-js": "^2.5.4",
+    "core-js": "^2.5.7",
     "intersection-observer": ">=0.5.0",
-    "rxjs": "^6.0.0",
+    "rxjs": "^6.2.0",
     "web-animations-js": "^2.3.1",
     "zone.js": "^0.8.26"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~0.6.0",
-    "@angular-devkit/build-ng-packagr": "~0.6.0",
-    "@angular/cli": "~6.0.1",
-    "@angular/compiler-cli": "^6.0.1",
-    "@angular/language-service": "^6.0.1",
+    "@angular-devkit/build-angular": "~0.6.5",
+    "@angular-devkit/build-ng-packagr": "~0.6.5",
+    "@angular/cli": "~6.0.5",
+    "@angular/compiler-cli": "^6.0.3",
+    "@angular/language-service": "^6.0.3",
     "@types/jasmine": "~2.8.6",
     "@types/jasminewd2": "~2.0.3",
     "@types/node": "~8.9.4",
     "codelyzer": "~4.2.1",
+    "express": "^4.16.3",
+    "http-server": "^0.11.1",
     "jasmine-core": "~2.99.1",
     "jasmine-spec-reporter": "~4.2.1",
     "karma": "~1.7.1",
@@ -65,13 +80,18 @@
     "karma-coverage-istanbul-reporter": "~1.4.2",
     "karma-jasmine": "~1.1.1",
     "karma-jasmine-html-reporter": "^0.2.2",
-    "ng-packagr": "^3.0.0-rc.2",
+    "ng-packagr": "^3.0.0",
     "prettier": "1.12.1",
     "protractor": "~5.3.0",
+    "reflect-metadata": "^0.1.12",
+    "rimraf": "^2.6.2",
+    "ts-loader": "^4.3.0",
     "ts-node": "~5.0.1",
     "tsickle": ">=0.25.5",
     "tslib": "^1.7.1",
     "tslint": "~5.9.1",
-    "typescript": "~2.7.2"
+    "typedoc": "^0.11.1",
+    "typescript": "~2.7.2",
+    "webpack-cli": "^2.1.4"
   }
 }
