--- a/package.json
+++ b/package.json
@@ -1,7 +1,23 @@
 {
   "name": "ng-in-viewport",
-  "version": "1.2.7",
+  "version": "1.2.8",
   "description": "Allows us to check if an element is within the browsers visual viewport",
+  "keywords": [
+    "intersection observer",
+    "visibility",
+    "viewport",
+    "lazy loading",
+    "lazy load image",
+    "lazy load images",
+    "infinite scroll",
+    "reactive",
+    "observable",
+    "ng",
+    "angular",
+    "angular 2",
+    "angular 4",
+    "angular 5"
+  ],
   "license": "MIT",
   "authors": [
     {
@@ -28,16 +44,19 @@
     "intersection-observer": ">=0.5.0"
   },
   "devDependencies": {
-    "@angular/compiler": ">=4.0.0 < 6",
-    "@angular/compiler-cli": ">=4.0.0 < 6",
-    "@angular/core": ">=4.0.0 < 6",
-    "@angular/common": ">=4.0.0 < 6",
+    "@angular/compiler": ">=4.0.0 < 6.0.0",
+    "@angular/compiler-cli": ">=4.0.0 < 6.0.0",
+    "@angular/core": ">=4.0.0 < 6.0.0",
+    "@angular/common": ">=4.0.0 < 6.0.0",
     "prettier": "^1.12.1",
     "rimraf": "^2.6.2",
     "rollup": "^0.58.2",
     "rxjs": "^5.0.1",
     "typedoc": "^0.11.1",
-    "typescript": "^2.3.2",
+    "typescript": "~2.6.2",
     "zone.js": "^0.8.4"
+  },
+  "resolutions": {
+    "typescript": "2.6.2"
   }
 }
