--- a/src/package.json
+++ b/src/package.json
@@ -1,7 +1,23 @@
 {
   "name": "ng-in-viewport",
-  "version": "1.2.7",
+  "version": "1.2.8",
   "description": "Allows us to check if an element is within the browsers visual viewport",
+  "keywords": [
+    "intersection observer",
+    "visibility",
+    "viewport",
+    "lazy loading",
+    "lazy load image",
+    "lazy load images",
+    "infinite scroll",
+    "reactive",
+    "observable",
+    "ng",
+    "angular",
+    "angular 2",
+    "angular 4",
+    "angular 5"
+  ],
   "license": "MIT",
   "authors": [
     {
@@ -22,8 +38,8 @@
   "module": "index.es5.js",
   "es2015": "index.js",
   "peerDependencies": {
-    "@angular/core": ">=4.0.0 < 6",
-    "@angular/common": ">=4.0.0 < 6",
+    "@angular/core": ">=4.0.0 < 6.0.0",
+    "@angular/common": ">=4.0.0 < 6.0.0",
     "intersection-observer": ">=0.5.0"
   }
 }
