--- a/package.json
+++ b/package.json
@@ -91,7 +91,7 @@
     "tslib": "^1.7.1",
     "tslint": "~5.10.0",
     "typedoc": "^0.11.1",
-    "typescript": "~2.9.2",
+    "typescript": ">=2.7.2 <2.8.0",
     "webpack-cli": "^3.0.8"
   },
   "resolutions": {
