--- a/package.json
+++ b/package.json
@@ -91,8 +91,13 @@
     "tslib": "^1.7.1",
     "tslint": "~5.10.0",
     "typedoc": "^0.11.1",
-    "typescript": ">=2.9.2",
+    "typescript": "~2.7.2",
     "webpack-cli": "^3.0.8"
+  },
+  "greenkeeper": {
+    "ignore": [
+      "typescript"
+    ]
   },
   "resolutions": {
     "typescript": "2.7.2"
