chore: change lib desc directory and update yarn.lock

--- a/angular.json
+++ b/angular.json
@@ -143,7 +143,7 @@
       "root": "projects/ng-in-viewport",
       "sourceRoot": "projects/ng-in-viewport/src",
       "projectType": "library",
-      "prefix": "lib",
+      "prefix": "inViewport",
       "architect": {
         "build": {
           "builder": "@angular-devkit/build-ng-packagr:build",
