--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
     "url": "https://github.com/k3nsei/ng-in-viewport/issues"
   },
   "scripts": {
+    "commit": "git-cz",
+    "commitmsg": "commitlint -E GIT_PARAMS",
     "ng": "ng",
     "start": "ng serve",
     "build": "ng build in-viewport --prod --aot",
@@ -62,17 +64,22 @@
     "zone.js": "^0.8.26"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~0.7.0",
-    "@angular-devkit/build-ng-packagr": "~0.7.0",
+    "@angular-devkit/build-angular": "~0.6.5",
+    "@angular-devkit/build-ng-packagr": "~0.6.5",
     "@angular/cli": "~6.1.0-rc.0",
     "@angular/compiler-cli": "^6.0.5",
     "@angular/language-service": "^6.0.5",
+    "@commitlint/cli": "^7.0.0",
+    "@commitlint/config-conventional": "^7.0.1",
     "@types/jasmine": "~2.8.6",
     "@types/jasminewd2": "~2.0.3",
     "@types/node": "~10.5.0",
     "codelyzer": "~4.4.2",
+    "commitizen": "^2.10.1",
+    "cz-conventional-changelog": "^2.1.0",
     "express": "^4.16.3",
     "http-server": "^0.11.1",
+    "husky": "^0.14.3",
     "jasmine-core": "~3.1.0",
     "jasmine-spec-reporter": "~4.2.1",
     "karma": "~2.0.3",
@@ -99,5 +106,15 @@
   },
   "engines": {
     "yarn": ">=1.7.0"
+  },
+  "commitlint": {
+    "extends": [
+      "@commitlint/config-conventional"
+    ]
+  },
+  "config": {
+    "commitizen": {
+      "path": "cz-conventional-changelog"
+    }
   }
 }
