--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -1,22 +1,40 @@
 pool:
   vmImage: 'Ubuntu 16.04'
 
-strategy:
-  matrix:
-    node_8_x:
-      node_version: 8.x
-    node_10_x:
-      node_version: 10.x
-
 steps:
 - task: NodeTool@0
+  displayName: 'Use Node 8.x'
   inputs:
-    version: $(node_version)
+    versionSpec: 8.x
 
 - script: |
-    yarn install
-    yarn run build:lib
-    yarn run build --progress=false
-    yarn run lint:lib
-    yarn run lint
-    yarn run test:lib --watch=false --progress=false --code-coverage=true --browsers=ChromeHeadlessNoSandbox
+    npm install --global npm@latest
+    npm install --global yarn@latest
+    npm install --global @angular/cli@latest
+  displayName: 'Install global dependencies'
+
+- script: 'yarn install'
+  displayName: 'Install local dependencies'
+
+- script: |
+    echo "
+    NodeJS: $(node --version)
+    NPM: v$(npm --version)
+    Yarn: v$(yarn --version)
+    "
+  displayName: 'Show tools versions'
+
+- script: 'yarn run lint:lib'
+  displayName: 'Lint library'
+
+- script: 'yarn run build:lib'
+  displayName: 'Build library'
+
+- script: 'yarn run test:lib --watch=false --progress=false --code-coverage=true --browsers=ChromeHeadlessNoSandbox'
+  displayName: 'Test library'
+
+- script: 'yarn run lint'
+  displayName: 'Lint demo application'
+
+- script: 'yarn run build --progress=false'
+  displayName: 'Build demo application'
