chore: Add sonarcloud

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -4,8 +4,8 @@ sonar.projectKey=ng-in-viewport
 sonar.projectName=ng-in-viewport
 sonar.projectVersion=6.0.2
 sonar.sourceEncoding=UTF-8
-sonar.sources=src/app,projects/ng-in-viewport/src/lib
+sonar.sources=src,projects/ng-in-viewport/src
+sonar.exclusions=**/node_modules/**,**/*.spec.ts
 sonar.test=src/app,projects/ng-in-viewport/src/lib
 sonar.test.inclusions=**/*.spec.ts
-sonar.exclusions=**/*.module.ts
 sonar.typescript.lcov.reportPaths=coverage/lcov.info
