--- a/package.json
+++ b/package.json
@@ -97,6 +97,7 @@
     "tsickle": ">=0.25.5",
     "tslib": "^1.7.1",
     "tslint": "~5.10.0",
+    "tslint-sonarts": "^1.8.0",
     "typedoc": "^0.12.0",
     "typescript": "~2.7.2",
     "webpack-cli": "^3.0.8"
