--- a/package.json
+++ b/package.json
@@ -103,6 +103,7 @@
     "webpack-cli": "^3.0.8"
   },
   "resolutions": {
+    "@types/jasmine": "2.8.9",
     "typescript": "2.7.2",
     "typedoc": "0.11.1"
   },
