--- a/package.json
+++ b/package.json
@@ -72,6 +72,7 @@
     "@types/jasmine": "2.8.9",
     "@types/jasminewd2": "~2.0.6",
     "@types/node": "~10.12.0",
+    "codecov": "^3.1.0",
     "codelyzer": "~4.4.2",
     "cz-conventional-changelog": "^2.1.0",
     "express": "^4.16.3",
