--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -52,6 +52,7 @@ jobs:
       - restore_cache:
           <<: *restore_cache_defaults
       - run: xvfb-run -a yarn run test:lib --watch=false --progress=false --source-map --code-coverage=true --browsers=ChromeHeadlessNoSandbox
+      - run: xvfb-run -a mkdir ./tmp
       - run: xvfb-run -a cp ./coverage/lcov.info ./tmp/lib-lcov.info
       # There are no tests yet for example app
       # - run: xvfb-run -a yarn run test --watch=false --progress=false --browsers=ChromeHeadlessNoSandbox
@@ -86,7 +87,7 @@ workflows:
       - test:
           requires:
             - build
-      - upload_coverage:
-          requires:
-            - build
-            - test
+      - upload_coverage
+        requires:
+          - build
+          - test
