chore: Upload test coverage
Signed-off-by: Piotr Stępniewski <k3nsei.pl@gmail.com>

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -86,7 +86,7 @@ workflows:
       - test:
           requires:
             - build
-      - upload_coverage
+      - upload_coverage:
           requires:
             - build
             - test
