chore: Run codecov
Signed-off-by: Piotr Stępniewski <k3nsei.pl@gmail.com>

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -52,7 +52,7 @@ jobs:
       - restore_cache:
           <<: *restore_cache_defaults
       - run: xvfb-run -a yarn run test:lib --watch=false --progress=false --source-map --code-coverage=true --browsers=ChromeHeadlessNoSandbox
-      - run: xvfb-run -a yarn run codecov --file=coverage/coverage-summary.json
+      - run: xvfb-run -a yarn run codecov
       # There are no tests yet for example app
       # - run: xvfb-run -a yarn run test --watch=false --progress=false --browsers=ChromeHeadlessNoSandbox
 
