chore: Upload test coverage
Signed-off-by: Piotr Stępniewski <k3nsei.pl@gmail.com>

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -14,6 +14,12 @@ anchor_2: &restore_cache_defaults
     - ng-in-viewport-{{ .Branch }}-{{ checksum "package.json" }}
     - ng-in-viewport-
 
+anchor_3: &download_cc_test_reporter
+  name:  Download cc-test-reporter
+  command: |
+    curl -L https://codeclimate.com/downloads/test-reporter/test-reporter-latest-linux-amd64 > /tmp/cc-test-reporter
+    chmod +x /tmp/cc-test-reporter
+
 general:
   branches:
     only:
@@ -52,9 +58,25 @@ jobs:
       - restore_cache:
           <<: *restore_cache_defaults
       - run: xvfb-run -a yarn run test:lib --watch=false --progress=false --source-map --code-coverage=true --browsers=ChromeHeadlessNoSandbox
-      - run: xvfb-run -a yarn run codecov
+      - run: xvfb-run -a cp ./coverage/lcov.info /tmp/lib-lcov.info
       # There are no tests yet for example app
       # - run: xvfb-run -a yarn run test --watch=false --progress=false --browsers=ChromeHeadlessNoSandbox
+      - persist_to_workspace:
+          root: tmp
+          paths:
+            - lib-lcov.info
+
+  upload_coverage:
+    <<: *defaults
+    steps:
+      - checkout
+      - restore_cache:
+          <<: *restore_cache_defaults
+      - run:
+          <<: *download_cc_test_reporter
+      - run: xvfb-run -a yarn run codecov --file /tmp/lib-lcov.info
+      - run: xvfb-run -a /tmp/cc-test-reporter format-coverage -t lcov -o /tmp/codeclimate.lib.json /tmp/lib-lcov.info
+      - run: xvfb-run -a /tmp/cc-test-reporter upload-coverage -i /tmp/codeclimate.lib.json
 
 workflows:
   version: 2
@@ -67,3 +89,7 @@ workflows:
       - test:
           requires:
             - build
+      - upload_coverage
+          requires:
+            - build
+            - test
