--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -19,14 +19,14 @@ jobs:
         version: 10.x
 
     - name: Install dependencies
-      run: npm install
+      run: yarn install
 
     - name: Lint
       run: |
-        npm run lint:lib
-        npm run lint
+        yarn run lint:lib
+        yarn run lint
 
     - name: Build
       run: |
-        npm run build:lib
-        npm run build --progress=false
+        yarn run build:lib
+        yarn run build --progress=false
