--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -20,8 +20,8 @@ jobs:
 
     - name: Setup Chrome
       run: |
-        wget https://dl.google.com/linux/direct/google-chrome-stable_current_amd64.deb
-        apt install ./google-chrome-stable_current_amd64.deb
+        wget -P /tmp https://dl.google.com/linux/direct/google-chrome-stable_current_amd64.deb
+        dpkg -i /tmp/google-chrome-stable_current_amd64.deb
 
     - name: Install dependencies
       run: yarn install
