chore(ci): Update version of node.js in Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -1,5 +1,5 @@
 pool:
-  vmImage: 'Ubuntu 16.04'
+  vmImage: 'ubuntu-latest'
 
 trigger:
 - master
@@ -8,9 +8,9 @@ trigger:
 
 steps:
 - task: NodeTool@0
-  displayName: 'Use Node 8.x'
+  displayName: 'Use Node 10.x'
   inputs:
-    versionSpec: 8.x
+    versionSpec: 10.x
 
 - script: |
     npm install --global npm@latest
