chore: Prepare release 6.1.0

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ng-in-viewport",
-  "version": "6.0.3",
+  "version": "6.1.0",
   "description": "Allows us to check if an element is within the browsers visual viewport",
   "license": "MIT",
   "authors": [
@@ -96,7 +96,7 @@
     "tslib": "^1.7.1",
     "tslint": "~5.10.0",
     "tslint-sonarts": "^1.8.0",
-    "typedoc": "~0.17.0",
+    "typedoc": "0.11.1",
     "typescript": "~2.7.2",
     "webpack-cli": "^3.0.8"
   },
