docs: add pasevin as a contributor

--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -89,7 +89,7 @@
       "login": "pasevin",
       "name": "Aleksandr Pasevin",
       "avatar_url": "https://avatars2.githubusercontent.com/u/1058469?v=4",
-      "profile": "https://hypeexperiences.com",
+      "profile": "https://github.com/pasevin",
       "contributions": [
         "bug"
       ]
