fix: Broken support of server platform in config

--- a/package.json
+++ b/package.json
@@ -52,7 +52,7 @@
     "@angular/platform-server": "^6.0.5",
     "@angular/router": "^6.0.5",
     "@nguniversal/common": "^7.1.1",
-    "@nguniversal/express-engine": "^10.0.0",
+    "@nguniversal/express-engine": "^7.1.1",
     "@nguniversal/module-map-ngfactory-loader": "^7.1.1",
     "classlist.js": "^1.1.20150312",
     "core-js": "^2.6.11",
@@ -71,7 +71,7 @@
     "@commitlint/config-conventional": "^9.0.0",
     "@types/jasmine": "2.8.17",
     "@types/jasminewd2": "~2.0.6",
-    "@types/node": "~13.13.0",
+    "@types/node": "~14.0.14",
     "all-contributors-cli": "^6.15.0",
     "codecov": "^3.1.0",
     "codelyzer": "~5.2.0",
@@ -86,6 +86,7 @@
     "karma-coverage-istanbul-reporter": "~2.1.0",
     "karma-jasmine": "~3.3.0",
     "karma-jasmine-html-reporter": "^1.1.0",
+    "lint-staged": "^10.2.11",
     "ng-packagr": "^5.0.1",
     "prettier": "2.0.5",
     "protractor": "~6.0.0",
