--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -91,6 +91,7 @@
       "avatar_url": "https://avatars2.githubusercontent.com/u/1058469?v=4",
       "profile": "https://github.com/pasevin",
       "contributions": [
+        "code",
         "bug"
       ]
     }
