chore(deps): Update to ng10. closes #344

--- a/angular.json
+++ b/angular.json
@@ -10,13 +10,14 @@
       "prefix": "invp",
       "schematics": {
         "@schematics/angular:component": {
-          "styleext": "scss"
+          "style": "scss"
         }
       },
       "architect": {
         "build": {
           "builder": "@angular-devkit/build-angular:browser",
           "options": {
+            "aot": true,
             "outputPath": "dist/in-viewport",
             "index": "src/index.html",
             "main": "src/main.ts",
@@ -33,6 +34,12 @@
           },
           "configurations": {
             "production": {
+              "budgets": [
+                {
+                  "type": "anyComponentStyle",
+                  "maximumWarning": "6kb"
+                }
+              ],
               "fileReplacements": [
                 {
                   "replace": "src/environments/environment.ts",
@@ -66,7 +73,8 @@
                   "with": "src/environments/environment.prod.ts"
                 }
               ]
-            }
+            ,              "optimization": true
+}
           }
         },
         "serve": {
@@ -154,7 +162,8 @@
           "configurations": {
             "production": {
               "project": "projects/ng-in-viewport/ng-package.prod.json"
-            }
+            ,              "tsConfig": "projects/ng-in-viewport/tsconfig.lib.prod.json"
+}
           }
         },
         "test": {
