--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
-    "build": "ng build in-viewport --prod --aot",
+    "build": "ng build in-viewport --prod",
     "build:lib": "ng build ng-in-viewport --prod",
     "test": "ng test in-viewport",
     "test:lib": "ng test ng-in-viewport",
@@ -41,65 +41,63 @@
     "serve:ssr": "node dist/server"
   },
   "dependencies": {
-    "@angular/animations": "^6.0.5",
-    "@angular/common": "^6.0.5",
-    "@angular/compiler": "^6.0.5",
-    "@angular/core": "^6.0.5",
-    "@angular/forms": "^6.0.5",
-    "@angular/http": "^6.0.5",
-    "@angular/platform-browser": "^6.0.5",
-    "@angular/platform-browser-dynamic": "^6.0.5",
-    "@angular/platform-server": "^6.0.5",
-    "@angular/router": "^6.0.5",
-    "@nguniversal/common": "^7.1.1",
-    "@nguniversal/express-engine": "^7.1.1",
-    "@nguniversal/module-map-ngfactory-loader": "^7.1.1",
+    "@angular/animations": "^10.1.3",
+    "@angular/common": "^10.1.3",
+    "@angular/compiler": "^10.1.3",
+    "@angular/core": "^10.1.3",
+    "@angular/forms": "^10.1.3",
+    "@angular/platform-browser": "^10.1.3",
+    "@angular/platform-browser-dynamic": "^10.1.3",
+    "@angular/platform-server": "^10.1.3",
+    "@angular/router": "^10.1.3",
+    "@nguniversal/common": "^10.1.0",
+    "@nguniversal/express-engine": "^10.1.0",
+    "@nguniversal/module-map-ngfactory-loader": "^8.2.6",
     "classlist.js": "^1.1.20150312",
     "core-js": "^2.6.11",
     "intersection-observer": ">=0.11.0",
     "rxjs": "^6.6.3",
+    "tslib": "^2.0.0",
     "web-animations-js": "^2.3.2",
-    "zone.js": "^0.11.0"
+    "zone.js": "~0.10.2"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~0.13.1",
-    "@angular-devkit/build-ng-packagr": "~0.13.8",
-    "@angular/cli": "~7.3.1",
-    "@angular/compiler-cli": "^6.0.5",
-    "@angular/language-service": "^6.0.5",
+    "@angular-devkit/build-angular": "~0.1001.3",
+    "@angular-devkit/build-ng-packagr": "~0.1001.3",
+    "@angular/cli": "~10.1.3",
+    "@angular/compiler-cli": "^10.1.3",
+    "@angular/language-service": "^10.1.3",
     "@commitlint/cli": "^11.0.0",
     "@commitlint/config-conventional": "^11.0.0",
     "@types/jasmine": "2.8.17",
     "@types/jasminewd2": "~2.0.6",
-    "@types/node": "~14.6.0",
+    "@types/node": "^12.11.1",
     "all-contributors-cli": "^6.15.0",
     "codecov": "^3.1.0",
-    "codelyzer": "~5.2.0",
+    "codelyzer": "^6.0.0",
     "cz-conventional-changelog": "^3.1.0",
     "express": "^4.16.3",
     "http-server": "^0.12.0",
     "husky": "^4.0.10",
-    "jasmine-core": "~3.6.0",
-    "jasmine-spec-reporter": "~6.0.0",
-    "karma": "~4.4.0",
-    "karma-chrome-launcher": "~2.2.0",
-    "karma-coverage-istanbul-reporter": "~2.1.0",
+    "jasmine-core": "~3.5.0",
+    "jasmine-spec-reporter": "~5.0.0",
+    "karma": "~5.0.0",
+    "karma-chrome-launcher": "~3.1.0",
+    "karma-coverage-istanbul-reporter": "~3.0.2",
     "karma-jasmine": "~4.0.0",
-    "karma-jasmine-html-reporter": "^1.1.0",
+    "karma-jasmine-html-reporter": "^1.5.0",
     "lint-staged": "^10.2.11",
-    "ng-packagr": "^5.0.1",
+    "ng-packagr": "^10.1.0",
     "prettier": "2.1.2",
-    "protractor": "~6.0.0",
+    "protractor": "~7.0.0",
     "reflect-metadata": "^0.1.12",
     "rimraf": "^3.0.1",
     "ts-loader": "^8.0.0",
     "ts-node": "~9.0.0",
-    "tsickle": ">=0.25.5",
-    "tslib": "^2.0.0",
-    "tslint": "~5.10.0",
+    "tslint": "~6.1.0",
     "tslint-sonarts": "^1.8.0",
     "typedoc": "0.11.1",
-    "typescript": "~2.9.0",
+    "typescript": "~4.0.3",
     "webpack-cli": "^3.0.8"
   },
   "resolutions": {
