--- a/projects/ng-in-viewport/package.json
+++ b/projects/ng-in-viewport/package.json
@@ -20,7 +20,7 @@
   },
   "dependencies": {
     "intersection-observer": ">=0.11.0",
-    "tslib": ">=1.9.0"
+    "tslib": "^2.0.0"
   },
   "peerDependencies": {
     "@angular/common": ">=6.0.0",
