--- a/package.json
+++ b/package.json
@@ -41,64 +41,64 @@
     "serve:ssr": "node dist/server"
   },
   "dependencies": {
-    "@angular/animations": "^10.1.3",
-    "@angular/common": "^10.1.3",
-    "@angular/compiler": "^10.1.3",
-    "@angular/core": "^10.1.3",
-    "@angular/forms": "^10.1.3",
-    "@angular/platform-browser": "^10.1.3",
-    "@angular/platform-browser-dynamic": "^10.1.3",
-    "@angular/platform-server": "^10.1.3",
-    "@angular/router": "^10.1.3",
-    "@nguniversal/common": "^10.1.0",
-    "@nguniversal/express-engine": "^10.1.0",
-    "@nguniversal/module-map-ngfactory-loader": "^8.2.6",
-    "classlist.js": "^1.1.20150312",
-    "core-js": "^2.6.11",
+    "@angular/animations": "10.1.4",
+    "@angular/common": "10.1.4",
+    "@angular/compiler": "10.1.4",
+    "@angular/core": "10.1.4",
+    "@angular/forms": "10.1.4",
+    "@angular/platform-browser": "10.1.4",
+    "@angular/platform-browser-dynamic": "10.1.4",
+    "@angular/platform-server": "10.1.4",
+    "@angular/router": "10.1.4",
+    "@nguniversal/common": "10.1.0",
+    "@nguniversal/express-engine": "10.1.0",
+    "@nguniversal/module-map-ngfactory-loader": "8.2.6",
+    "classlist.js": "1.1.20150312",
+    "core-js": "3.6.5",
     "intersection-observer": ">=0.11.0",
-    "rxjs": "^6.6.3",
-    "tslib": "^2.0.0",
-    "web-animations-js": "^2.3.2",
-    "zone.js": "~0.11.0"
+    "rxjs": "6.6.3",
+    "tslib": "2.0.1",
+    "web-animations-js": "2.3.2",
+    "zone.js": "0.11.1"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~0.1001.3",
-    "@angular-devkit/build-ng-packagr": "~0.1001.3",
-    "@angular/cli": "~10.1.3",
-    "@angular/compiler-cli": "^10.1.3",
-    "@angular/language-service": "^10.1.3",
-    "@commitlint/cli": "^11.0.0",
-    "@commitlint/config-conventional": "^11.0.0",
-    "@types/jasmine": "2.8.17",
-    "@types/jasminewd2": "~2.0.6",
-    "@types/node": "^12.11.1",
-    "all-contributors-cli": "^6.15.0",
-    "codecov": "^3.1.0",
-    "codelyzer": "^6.0.0",
-    "cz-conventional-changelog": "^3.1.0",
-    "express": "^4.16.3",
-    "http-server": "^0.12.0",
-    "husky": "^4.0.10",
-    "jasmine-core": "~3.5.0",
-    "jasmine-spec-reporter": "~5.0.0",
-    "karma": "~5.2.0",
-    "karma-chrome-launcher": "~3.1.0",
-    "karma-coverage-istanbul-reporter": "~3.0.2",
-    "karma-jasmine": "~4.0.0",
-    "karma-jasmine-html-reporter": "^1.5.0",
-    "lint-staged": "^10.2.11",
-    "ng-packagr": "^10.1.0",
+    "@angular-devkit/build-angular": "0.1001.4",
+    "@angular-devkit/build-ng-packagr": "0.1001.4",
+    "@angular/cli": "10.1.4",
+    "@angular/compiler-cli": "10.1.4",
+    "@angular/language-service": "10.1.4",
+    "@commitlint/cli": "11.0.0",
+    "@commitlint/config-conventional": "11.0.0",
+    "@types/jasmine": "3.5.14",
+    "@types/jasminewd2": "2.0.8",
+    "@types/node": "14.11.2",
+    "all-contributors-cli": "6.17.4",
+    "codecov": "3.7.2",
+    "codelyzer": "6.0.1",
+    "cz-conventional-changelog": "3.3.0",
+    "express": "4.17.1",
+    "http-server": "0.12.3",
+    "husky": "4.3.0",
+    "jasmine-core": "3.6.0",
+    "jasmine-spec-reporter": "6.0.0",
+    "karma": "5.2.3",
+    "karma-chrome-launcher": "3.1.0",
+    "karma-coverage-istanbul-reporter": "3.0.3",
+    "karma-jasmine": "4.0.1",
+    "karma-jasmine-html-reporter": "1.5.4",
+    "lint-staged": "10.4.0",
+    "ng-packagr": "10.1.2",
     "prettier": "2.1.2",
-    "protractor": "~7.0.0",
-    "reflect-metadata": "^0.1.12",
-    "rimraf": "^3.0.1",
-    "ts-loader": "^8.0.0",
-    "ts-node": "~9.0.0",
-    "tslint": "~6.1.0",
-    "tslint-sonarts": "^1.8.0",
+    "protractor": "7.0.0",
+    "reflect-metadata": "0.1.13",
+    "rimraf": "3.0.2",
+    "ts-loader": "8.0.4",
+    "ts-node": "9.0.0",
+    "tslint": "6.1.3",
+    "tslint-sonarts": "1.9.0",
     "typedoc": "0.19.2",
-    "typescript": "~4.0.3",
-    "webpack-cli": "^3.0.8"
+    "typescript": "4.0.3",
+    "webpack-cli": "3.3.12"
   },
   "engines": {
     "yarn": ">=1.12.0"
