--- a/package.json
+++ b/package.json
@@ -101,6 +101,8 @@
     "webpack-cli": "3.3.12"
   },
   "engines": {
-    "yarn": ">=1.12.0"
+    "node": ">=12.0.0 <16.0.0",
+    "npm": "You must use Yarn instead of NPM",
+    "yarn": ">=1.22.10"
   }
 }
