--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -117,7 +117,7 @@
       "login": "samizarraa",
       "name": "Sami Zarraa",
       "avatar_url": "https://avatars3.githubusercontent.com/u/20872538?v=4",
-      "profile": "http://izron.com",
+      "profile": "https://github.com/samizarraa",
       "contributions": [
         "bug"
       ]
