fix(deps): Update angular monorepo to v11.0.0

--- a/package.json
+++ b/package.json
@@ -41,32 +41,31 @@
     "serve:ssr": "node dist/server"
   },
   "dependencies": {
-    "@angular/animations": "10.2.2",
-    "@angular/common": "10.2.2",
-    "@angular/compiler": "10.2.2",
-    "@angular/core": "10.2.2",
-    "@angular/forms": "10.2.2",
-    "@angular/platform-browser": "10.2.2",
-    "@angular/platform-browser-dynamic": "10.2.2",
-    "@angular/platform-server": "10.2.2",
-    "@angular/router": "10.2.2",
-    "@nguniversal/common": "10.1.0",
-    "@nguniversal/express-engine": "10.1.0",
+    "@angular/animations": "11.0.0",
+    "@angular/common": "11.0.0",
+    "@angular/compiler": "11.0.0",
+    "@angular/core": "11.0.0",
+    "@angular/forms": "11.0.0",
+    "@angular/platform-browser": "11.0.0",
+    "@angular/platform-browser-dynamic": "11.0.0",
+    "@angular/platform-server": "11.0.0",
+    "@angular/router": "11.0.0",
+    "@nguniversal/common": "11.0.0",
+    "@nguniversal/express-engine": "11.0.0",
     "@nguniversal/module-map-ngfactory-loader": "8.2.6",
     "classlist.js": "1.1.20150312",
     "core-js": "3.7.0",
-    "intersection-observer": ">=0.11.0",
+    "intersection-observer": "0.11.0",
     "rxjs": "6.6.3",
     "tslib": "2.0.3",
     "web-animations-js": "2.3.2",
     "zone.js": "0.11.3"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "0.1002.0",
-    "@angular-devkit/build-ng-packagr": "0.1002.0",
-    "@angular/cli": "10.2.0",
-    "@angular/compiler-cli": "10.2.2",
-    "@angular/language-service": "10.2.2",
+    "@angular-devkit/build-angular": "0.1100.0",
+    "@angular/cli": "11.0.0",
+    "@angular/compiler-cli": "11.0.0",
+    "@angular/language-service": "11.0.0",
     "@commitlint/cli": "11.0.0",
     "@commitlint/config-conventional": "11.0.0",
     "@types/jasmine": "3.6.1",
@@ -87,7 +86,7 @@
     "karma-jasmine": "4.0.1",
     "karma-jasmine-html-reporter": "1.5.4",
     "lint-staged": "10.5.1",
-    "ng-packagr": "10.1.2",
+    "ng-packagr": "11.0.2",
     "prettier": "2.1.2",
     "protractor": "7.0.0",
     "reflect-metadata": "0.1.13",
