--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -30,7 +30,7 @@ jobs:
         sudo apt-get install -f --yes /tmp/google-chrome-stable_current_amd64.deb
 
     - name: Install dependencies
-      run: yarn install
+      run: yarn install --frozen-lockfile
 
     - name: Lint
       run: |
@@ -44,7 +44,7 @@ jobs:
 
     - name: Test
       run: yarn run test:lib --watch=false --progress=false --source-map --code-coverage=true --browsers=ChromeHeadlessNoSandbox
-      
+
     - name: Upload coverage
       uses: codecov/codecov-action@v1.0.15
       with:
