--- a/.gitignore
+++ b/.gitignore
@@ -1,13 +1,13 @@
 # Compiled output
-/dist
-/tmp
-/out-tsc
+dist/
+tmp/
+out-tsc/
 
 # Only exists if Bazel was run
-/bazel-out
+bazel-out/
 
 # Dependencies
-/node_modules
+node_modules/
 
 # NPM files
 package-lock.json
@@ -24,10 +24,10 @@ npm-debug.log
 yarn-error.log
 
 # Husky
-/.husky/_/
+.husky/_/
 
 # IDEs and editors
-/.idea
+.idea/
 .project
 .classpath
 .c9/
@@ -48,12 +48,12 @@ chrome-profiler-events*.json
 speed-measure-plugin*.json
 
 # misc
-/.sass-cache
-/connect.lock
-/coverage
-/libpeerconnection.log
+.sass-cache/
+connect.lock
+coverage/
+libpeerconnection.log
 testem.log
-/typings
+typings/
 
 # System Files
 .DS_Store
