--- a/package.json
+++ b/package.json
@@ -1,11 +1,12 @@
 {
   "name": "ng-in-viewport",
-  "version": "0.0.0",
+  "version": "11.0.0",
   "private": true,
   "scripts": {
     "build": "ng build",
     "build:demo": "ng build demo --prod",
     "build:lib": "ng build ng-in-viewport --prod",
+    "changelog": "conventional-changelog -p angular -i CHANGELOG.md -s",
     "contributors:add": "all-contributors add",
     "contributors:generate": "all-contributors generate",
     "predocs": "rimraf ./docs",
@@ -57,6 +58,7 @@
     "@typescript-eslint/parser": "4.10.0",
     "all-contributors-cli": "6.19.0",
     "codecov": "3.8.1",
+    "conventional-changelog-cli": "2.1.1",
     "cypress": "6.1.0",
     "eslint": "7.16.0",
     "eslint-plugin-cypress": "2.11.2",
