--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -2,23 +2,23 @@ name: Main
 
 on:
   push:
-    branches:
-    - master
-    - develop
+    branches: [stable, develop]
+  pull_request:
+    branches: [develop]
 
 jobs:
   build:
 
-    runs-on: ubuntu-18.04
+    runs-on: ubuntu-20.04
 
     steps:
     - name: Checkout
-      uses: actions/checkout@master
+      uses: actions/checkout@v2
 
     - name: Setup Node.js
       uses: actions/setup-node@v1
       with:
-        version: 10.x
+        version: 12.x
 
     - name: Setup Chrome
       run: |
