chore: update branch name

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -114,5 +114,5 @@ workflows:
           filters:
             branches:
               only:
-                - master
+                - stable
                 - develop
