--- a/.github/workflows/CODEQL_ANALYSIS.yml
+++ b/.github/workflows/CODEQL_ANALYSIS.yml
@@ -1,7 +1,7 @@
 name: 'CodeQL'
 on:
   push:
-    branches: [master, develop]
+    branches: [stable, develop]
   pull_request:
     branches: [develop]
   schedule:
