--- a/.github/workflows/E2E_DEMO.yml
+++ b/.github/workflows/E2E_DEMO.yml
@@ -1,7 +1,7 @@
 name: 'E2E Demo'
 on:
   push:
-    branches: [master, develop]
+    branches: [stable, develop]
   pull_request:
     branches: [develop]
 jobs:
