--- a/package.json
+++ b/package.json
@@ -80,6 +80,7 @@
     "prettier-plugin-organize-imports": "1.1.1",
     "prettier-plugin-packagejson": "2.2.9",
     "rimraf": "3.0.2",
+    "serve": "11.3.2",
     "ts-node": "9.1.1",
     "typedoc": "0.20.18",
     "typescript": "4.0.5"
